Updated to more proper links.

--- a/testpages/first_version.html
+++ b/testpages/first_version.html
@@ -6,16 +6,16 @@
 <h1>Welcome!</h1>
 <p>This is a testpage dedicated to testing the competitive scraper.</p>
 
-<a href="/hyperlink1">Link 1</a></br>
-<a href="/hyperlink2">Link 2</a></br>
-<a href="/hyperlink3">Link 3</a></br>
-<a href="/hyperlink4">Link 4</a></br>
-<a href="/hyperlink5">Link 5</a></br>
-<a href="/hyperlink6">Link 6</a></br>
-<a href="/hyperlink7">Link 7</a></br>
-<a href="/hyperlink8">Link 8</a></br>
-<a href="/hyperlink9">Link 9</a></br>
-<a href="/hyperlink10">Link 10</a></br>
+<a href="http://localhost:8000/testpages/hyperlink1">Link 1</a></br>
+<a href="http://localhost:8000/testpages/hyperlink2">Link 2</a></br>
+<a href="http://localhost:8000/testpages/hyperlink3">Link 3</a></br>
+<a href="http://localhost:8000/testpages/hyperlink4">Link 4</a></br>
+<a href="http://localhost:8000/testpages/hyperlink5">Link 5</a></br>
+<a href="http://localhost:8000/testpages/hyperlink6">Link 6</a></br>
+<a href="http://localhost:8000/testpages/hyperlink7">Link 7</a></br>
+<a href="http://localhost:8000/testpages/hyperlink8">Link 8</a></br>
+<a href="http://localhost:8000/testpages/hyperlink9">Link 9</a></br>
+<a href="http://localhost:8000/testpages/hyperlink10">Link 10</a></br>
 
 
 </body>
