--- a/testpages/second_version.html
+++ b/testpages/second_version.html
@@ -7,15 +7,15 @@
 <p>This is the second version of a testpage, substituting an old version of a scraped website.</p>
 
 
-<a href="/hyperlink1">Link 1</a>
-<a href="/hyperlink2">Link 2</a>
-<a href="/hyperlink3">Link 3</a>
-<a href="/hyperlink4">Link 4</a>
-<a href="/hyperlink5">Link 5</a>
-<a href="/hyperlink6">Link 6</a>
-<a href="/hyperlink7">Link 7</a>
-<a href="/hyperlink8">Link 8</a>
-<a href="/hyperlink11">Link 11</a>
+<a href="http://locahost:8000/testpages/hyperlink1">Link 1</a>
+<a href="http://localhost:8000/testpages/hyperlink2">Link 2</a>
+<a href="http://localhost:8000/testpages/hyperlink3">Link 3</a>
+<a href="http://localhost:8000/testpages/hyperlink4">Link 4</a>
+<a href="http://localhost:8000/testpages/hyperlink5">Link 5</a>
+<a href="http://localhost:8000/testpages/hyperlink6">Link 6</a>
+<a href="http://localhost:8000/testpages/hyperlink7">Link 7</a>
+<a href="http://localhost:8000/testpages/hyperlink8">Link 8</a>
+<a href="http://localhost:8000/testpages/hyperlink11">Link 11</a>
 
 </body>
 </html>
