More tricky links to take care of.

--- a/testpages/first_version.html
+++ b/testpages/first_version.html
@@ -13,9 +13,9 @@
 <a href="http://localhost:8000/testpages/hyperlink5">Link 5</a></br>
 <a href="http://localhost:8000/testpages/hyperlink6">Link 6</a></br>
 <a href="http://localhost:8000/testpages/hyperlink7">Link 7</a></br>
-<a href="http://localhost:8000/testpages/hyperlink8">Link 8</a></br>
-<a href="http://localhost:8000/testpages/hyperlink9">Link 9</a></br>
-<a href="http://localhost:8000/testpages/hyperlink10">Link 10</a></br>
+<a href="/somefolder/hyperlink8.html">Link 8</a></br>
+<a href="hyperlink9.html">Link 9</a></br>
+<a href="hyperlink10.html">Link 10</a></br>
 
 
 </body>
