--- a/testpages/second_version.html
+++ b/testpages/second_version.html
@@ -7,15 +7,15 @@
 <p>This is the second version of a testpage, substituting an old version of a scraped website.</p>
 
 
-<a href="http://locahost:8000/testpages/hyperlink1">Link 1</a>
-<a href="http://localhost:8000/testpages/hyperlink2">Link 2</a>
-<a href="http://localhost:8000/testpages/hyperlink3">Link 3</a>
-<a href="http://localhost:8000/testpages/hyperlink4">Link 4</a>
-<a href="http://localhost:8000/testpages/hyperlink5">Link 5</a>
-<a href="http://localhost:8000/testpages/hyperlink6">Link 6</a>
-<a href="http://localhost:8000/testpages/hyperlink7">Link 7</a>
-<a href="http://localhost:8000/testpages/hyperlink8">Link 8</a>
-<a href="http://localhost:8000/testpages/hyperlink11">Link 11</a>
+<a href="hyperlink1.html">Link 1</a>
+<a href="http://localhost:8000/testpages/hyperlink2.html">Link 2</a>
+<a href="http://localhost:8000/testpages/hyperlink3.html">Link 3</a>
+<a href="http://localhost:8000/testpages/hyperlink4.html">Link 4</a>
+<a href="/somefolder/hyperlink5.html">Link 5</a>
+<a href="http://localhost:8000/testpages/hyperlink6.html">Link 6</a>
+<a href="http://localhost:8000/testpages/hyperlink7.html">Link 7</a>
+<a href="http://localhost:8000/testpages/hyperlink8.html">Link 8</a>
+<a href="http://localhost:8000/testpages/hyperlink11.html">Link 11</a>
 
 </body>
 </html>
