--- a/testpages/first_version.html
+++ b/testpages/first_version.html
@@ -6,13 +6,13 @@
 <h1>Welcome!</h1>
 <p>This is a testpage dedicated to testing the competitive scraper.</p>
 
-<a href="http://localhost:8000/testpages/hyperlink1">Link 1</a></br>
-<a href="http://localhost:8000/testpages/hyperlink2">Link 2</a></br>
-<a href="http://localhost:8000/testpages/hyperlink3">Link 3</a></br>
-<a href="http://localhost:8000/testpages/hyperlink4">Link 4</a></br>
-<a href="http://localhost:8000/testpages/hyperlink5">Link 5</a></br>
-<a href="http://localhost:8000/testpages/hyperlink6">Link 6</a></br>
-<a href="http://localhost:8000/testpages/hyperlink7">Link 7</a></br>
+<a href="http://localhost:8000/testpages/hyperlink1.html">Link 1</a></br>
+<a href="http://localhost:8000/testpages/hyperlink2.html">Link 2</a></br>
+<a href="http://localhost:8000/testpages/hyperlink3.html">Link 3</a></br>
+<a href="http://localhost:8000/testpages/hyperlink4.html">Link 4</a></br>
+<a href="http://localhost:8000/testpages/hyperlink5.html">Link 5</a></br>
+<a href="http://localhost:8000/testpages/hyperlink6.html">Link 6</a></br>
+<a href="http://localhost:8000/testpages/hyperlink7.html">Link 7</a></br>
 <a href="/somefolder/hyperlink8.html">Link 8</a></br>
 <a href="hyperlink9.html">Link 9</a></br>
 <a href="hyperlink10.html">Link 10</a></br>
